intel/bench_214_new/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/log.txt
bench_214_new/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:79:38: error: assigning to 'int' from incompatible type 'void *'
      RCC_Clocks->SYSCLK_Frequency = HSI48_VALUE;
                                     ^~~~~~~~~~~
bench_214_new/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:130:36: error: assigning to 'int' from incompatible type 'void *'
    RCC_Clocks->CECCLK_Frequency = LSE_VALUE;
                                   ^~~~~~~~~
bench_214_new/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:159:39: error: assigning to 'int' from incompatible type 'void *'
    RCC_Clocks->USART1CLK_Frequency = LSE_VALUE;
                                      ^~~~~~~~~
bench_214_new/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:181:39: error: assigning to 'int' from incompatible type 'void *'
    RCC_Clocks->USART2CLK_Frequency = LSE_VALUE;
                                      ^~~~~~~~~
bench_214_new/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:193:36: error: assigning to 'int' from incompatible type 'void *'
    RCC_Clocks->USBCLK_Frequency = HSI48_VALUE;
                                   ^~~~~~~~~~~
5 errors generated.
HLS FPGA Parse FAILED.
